--- a/yoga/src/main/resources/static/index.html
+++ b/yoga/src/main/resources/static/index.html
@@ -43,6 +43,12 @@
                 </nav>
             </div>
         </header>
+        <div class="main-content">
+            <div class="mc-child">
+            <span class="Hero-header">Marjella Studio</span>
+            <span class="Hero-sub-header">Heavenly Touch</span>
+            </div>
+        </div>
     </section>
 
     <section class="section" id="about-us-section"></section>
