--- a/yoga/src/main/resources/static/index.html
+++ b/yoga/src/main/resources/static/index.html
@@ -47,20 +47,97 @@
 
         <div class="main-content">
             <div class="mc-child">
-            <span class="Hero-header">Marjella Studio</span>
-            <span class="Hero-sub-header">Heavenly Touch</span>
+            <span class="hero-header">Marjella Studio</span>
+            <span class="hero-sub-header">Heavenly Touch</span>
             </div>
         </div>
-        
+
     </section>
 
-    <section class="section" id="about-us-section"></section>
+    <section class="section" id="about-us-section">
 
-    <section class="section" id="directions-section"></section>
+        <div class="sect-header-div">
+            <span class="sect-header">About Us</span>
+        </div>
 
-    <section class="section" id="instructors-section"></section>
+        <div class="abo-parent">
+            <div class="abo-child">
+                <div class="abo-img-div">
+                    <img src="" alt="about-us-image" class="abo-image">
+                </div>
+                <div class="about-us-content">
+                    <p class="about-us-paragraph">
+                        Welcome to Marjella Yoga, a sanctuary for holistic well-being and self-discovery. 
+                        At Marjella, we believe in the transformative power of yoga to nurture the body, mind, and spirit.
+                    </p>
 
-    <section class="section" id="price-plan-section"></section>
+                    <p class="about-us-paragraph">
+                        Our approach is rooted in creating a harmonious balance between traditional yogic practices and modern mindfulness.
+                    </p>
+
+                    <p class="about-us-paragraph">
+                        In the heart of our practice is a dedication to individual growth and community support. Marjella Yoga offers a 
+                        diverse range of classes, blending various styles and techniques to cater to practitioners of all levels.
+                    </p>
+
+                    <p class="about-us-paragraph">
+                        Whether you're seeking a dynamic Vinyasa flow, the precision of Iyengar, or the tranquility of restorative sessions, 
+                        our experienced instructors guide you on a journey of self-exploration and empowerment.
+                    </p>
+
+                </div>
+            </div>
+            <div class="abo-child">
+                <div class="about-us-content">
+                    <p class="about-us-paragraph">
+                        Our studio provides a welcoming and serene space, encouraging a 
+                        sense of connection and unity among our practitioners. Marjella Yoga 
+                        s not just about physical postures; it's a holistic experience that 
+                        incorporates breathwork, meditation, and the timeless wisdom of yoga 
+                        philosophy.
+                    </p>
+
+                    <p class="about-us-paragraph">
+                        Step onto the mat at Marjella Yoga, where every practice becomes an 
+                        opportunity for growth, self-love, and a deeper connection to your 
+                        truest self. Embrace the transformative journey that awaits you in 
+                        our inclusive and supportive yoga community.
+                    </p>
+
+                </div>
+                <div class="abo-img-div">
+                    <img src="" alt="about-us-image" class="abo-image">
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <section class="section" id="directions-section">
+
+        <div class="sect-header-div">
+            <span class="sect-header">Directions</span>
+        </div>
+
+    </section>
+
+    <section class="section" id="instructors-section">
+
+        <div class="sect-header-div">
+            <span class="sect-header">Instructions</span>
+        </div>
+
+    </section>
+
+    <section class="section" id="price-plan-section">
+
+        <div class="sect-header-div">
+            <span class="sect-header">Plans</span>
+        </div>
+
+        <div class="parent"></div>
+
+    </section>
 
     <footer>
 
