--- a/yoga/src/main/resources/static/index.html
+++ b/yoga/src/main/resources/static/index.html
@@ -119,6 +119,16 @@
             <span class="sect-header">Directions</span>
         </div>
 
+        <div class="modal-parent">
+            <div class="modal">
+                <div class="modal-img"></div>
+                <div class="modal-details">
+                    <span class="modal-title">Ndira</span>
+                    <span class="modal-details">Spritual Immersion</span>
+                </div>
+            </div>
+        </div>
+
     </section>
 
     <section class="section" id="instructors-section">
