--- a/yoga/src/main/resources/static/index.html
+++ b/yoga/src/main/resources/static/index.html
@@ -120,13 +120,31 @@
         </div>
 
         <div class="modal-parent">
+
             <div class="modal">
                 <div class="modal-img"></div>
                 <div class="modal-details">
                     <span class="modal-title">Ndira</span>
-                    <span class="modal-details">Spritual Immersion</span>
+                    <span class="modal-details">Spritual Immersion.</span>
                 </div>
             </div>
+
+            <div class="modal">
+                <div class="modal-img"></div>
+                <div class="modal-details">
+                    <span class="modal-title">Hatha</span>
+                    <span class="modal-details">Relaxed and Comfortable.</span>
+                </div>
+            </div>
+
+            <div class="modal">
+                <div class="modal-img"></div>
+                <div class="modal-details">
+                    <span class="modal-title">Vajra</span>
+                    <span class="modal-details">Strengthening the spine.</span>
+                </div>
+            </div>
+
         </div>
 
     </section>
@@ -137,6 +155,34 @@
             <span class="sect-header">Instructions</span>
         </div>
 
+        <div class="modal-parent">
+
+            <div class="modal">
+                <div class="modal-img"></div>
+                <div class="modal-details">
+                    <span class="modal-title">John DoeSon</span>
+                    <span class="modal-details">Co-founder and Instructor</span>
+                </div>
+            </div>
+
+            <div class="modal">
+                <div class="modal-img"></div>
+                <div class="modal-details">
+                    <span class="modal-title">Jane DoeSon</span>
+                    <span class="modal-details">Co-founder</span>
+                </div>
+            </div>
+
+            <div class="modal">
+                <div class="modal-img"></div>
+                <div class="modal-details">
+                    <span class="modal-title">Martha Dough</span>
+                    <span class="modal-details">Lead instructor</span>
+                </div>
+            </div>
+
+        </div>
+
     </section>
 
     <section class="section" id="price-plan-section">
@@ -145,7 +191,39 @@
             <span class="sect-header">Plans</span>
         </div>
 
-        <div class="parent"></div>
+        <div class="modal-parent">
+
+            <div class="modal modal-price">
+                <div class="modal-img"></div>
+                <div class="modal-details">
+                    <span class="modal-title">4 Lessons</span>
+                    <span class="modal-details">Valid for 1 month</span>
+                    <span class="modal-price">R550.00</span>
+                </div>
+                <button>Get Plan</button>
+            </div>
+
+            <div class="modal">
+                <div class="modal-img"></div>
+                <div class="modal-details">
+                    <span class="modal-title">8 Lessons</span>
+                    <span class="modal-details">Valid for 1 month</span>
+                    <span class="modal-price">R1000.00</span>
+                </div>
+                <button>Get Plan</button>
+            </div>
+
+            <div class="modal">
+                <div class="modal-img"></div>
+                <div class="modal-details">
+                    <span class="modal-title">unlimited Lessons</span>
+                    <span class="modal-details">Valid for 12 month</span>
+                    <span class="modal-price">R5000.00</span>
+                </div>
+                <button>Get Plan</button>
+            </div>
+
+        </div>
 
     </section>
 
