--- a/yoga/src/main/resources/static/index.html
+++ b/yoga/src/main/resources/static/index.html
@@ -193,34 +193,34 @@
 
         <div class="modal-parent">
 
-            <div class="modal modal-price">
+            <div class="modal modal-price-div">
                 <div class="modal-img"></div>
                 <div class="modal-details">
                     <span class="modal-title">4 Lessons</span>
                     <span class="modal-details">Valid for 1 month</span>
                     <span class="modal-price">R550.00</span>
                 </div>
-                <button>Get Plan</button>
+                <button class="custom-btn btn-3"><span>Get plan</span></button>
             </div>
 
-            <div class="modal">
+            <div class="modal modal-price-div">
                 <div class="modal-img"></div>
                 <div class="modal-details">
                     <span class="modal-title">8 Lessons</span>
                     <span class="modal-details">Valid for 1 month</span>
                     <span class="modal-price">R1000.00</span>
                 </div>
-                <button>Get Plan</button>
+                <button class="custom-btn btn-3"><span>Get plan</span></button>
             </div>
 
-            <div class="modal">
+            <div class="modal modal-price-div">
                 <div class="modal-img"></div>
                 <div class="modal-details">
                     <span class="modal-title">unlimited Lessons</span>
                     <span class="modal-details">Valid for 12 month</span>
                     <span class="modal-price">R5000.00</span>
                 </div>
-                <button>Get Plan</button>
+                <button class="custom-btn btn-3"><span>Get plan</span></button>
             </div>
 
         </div>
