--- a/yoga/src/main/resources/static/index.html
+++ b/yoga/src/main/resources/static/index.html
@@ -20,7 +20,7 @@
 
         <header>
             <div class="head-left-div">
-                <img src="" alt="Marjella Yoga" class="brand-logo">
+                <img src="/photo-and-Icons/icons/marj.svg" alt="Marjella Yoga" class="brand-logo">
             </div>
             <div class="head-right-div">
                 <nav>
@@ -92,6 +92,8 @@
             </div>
 
             <div class="abo-child">
+                <div class="abo-img-div">
+                </div>
                 <div class="about-us-content">
                     <p class="about-us-paragraph">
                         Our studio provides a welcoming and serene space, encouraging a 
@@ -108,8 +110,6 @@
                         our inclusive and supportive yoga community.
                     </p>
 
-                </div>
-                <div class="abo-img-div">
                 </div>
             </div>
 
@@ -156,7 +156,7 @@
     <section class="section" id="instructors-section">
 
         <div class="sect-header-div">
-            <span class="sect-header">Instructions</span>
+            <span class="sect-header">Instructors</span>
         </div>
 
         <div class="modal-parent">
@@ -198,7 +198,9 @@
         <div class="modal-parent">
 
             <div class="modal modal-price-div">
-                <div class="modal-img"></div>
+                <div class="modal-img">
+                    <img src="/photo-and-Icons/icons/lev1.svg" alt="Marjella Yoga" class="brand-logo">
+                </div>
                 <div class="modal-details">
                     <span class="modal-title">4 Lessons</span>
                     <span class="modal-details">Valid for 1 month</span>
@@ -208,7 +210,9 @@
             </div>
 
             <div class="modal modal-price-div">
-                <div class="modal-img"></div>
+                <div class="modal-img">
+                    <img src="/photo-and-Icons/icons/lev2.svg" alt="Marjella Yoga" class="brand-logo">
+                </div>
                 <div class="modal-details">
                     <span class="modal-title">8 Lessons</span>
                     <span class="modal-details">Valid for 1 month</span>
@@ -218,7 +222,9 @@
             </div>
 
             <div class="modal modal-price-div">
-                <div class="modal-img"></div>
+                <div class="modal-img">
+                    <img src="/photo-and-Icons/icons/lev3.svg" alt="Marjella Yoga" class="brand-logo">
+                </div>
                 <div class="modal-details">
                     <span class="modal-title">unlimited Lessons</span>
                     <span class="modal-details">Valid for 12 month</span>
